# cpp-space-invader

./: CMakeLists.txt  CMakePresets.json  Config.cpp  Config.h  ConfigGameItems.h  Flowcharts.md  Game.cpp  Game.h  README.md  Util.cpp  Util.h  build.ps1  build.sh  main.cpp  vcpkg.json
game-stages/: MiddleGameStage.cpp  MiddleGameStage.h  OpenStage.cpp  OpenStage.h
objects/: Alien.h  AlienBullet.h  Asteroid.cpp  Asteroid.h  BackgroundElement.cpp  BackgroundElement.h  DimensionalObject.h  Explosion.h  FallingObject.h  FireLineItem.h  FlyingObject.h  GunBoosterItem.h  HealingItem.h  HealthObject.h  PickUpItem.h  Player.h  ScoreObject.h  Shield.h  ShieldItem.h  Spaceship.h  SpaceshipBullet.cpp  SpaceshipBullet.h  Star.cpp  Star.h  StarItem.h
sound/: BackgroundMusic.cpp  BackgroundMusic.h  GameMusic.cpp  GameMusic.h  GameSoundEffect.cpp  GameSoundEffect.h
ui/: Component.cpp  Component.h  DamageTexture.cpp  DamageTexture.h  EventAction.cpp  EventAction.h  EventHandler.cpp  EventHandler.h  HiddenTexture.cpp  HiddenTexture.h  PNGTexture.cpp  PNGTexture.h  SdlUi.cpp  SdlUi.h  SpaceshipTexture.cpp  SpaceshipTexture.h  TextureCreator.cpp  TextureCreator.h  TextureCreatorFromPNG.cpp  TextureCreatorFromPNG.h
ui/objectTextures/: AlienTexture.cpp  AlienTexture.h  AsteroidTexture.cpp  AsteroidTexture.h  BackgroundTexture.cpp  BackgroundTexture.h  BlueStarTexture.cpp  BlueStarTexture.h  BulletTexture.cpp  BulletTexture.h  ExplosionTexture.cpp  ExplosionTexture.h  FireLineBoosterTexture.cpp  FireLineBoosterTexture.h  GunBoosterTexture.cpp  GunBoosterTexture.h  HealingItemTexture.cpp  HealingItemTexture.h  ShieldItemTexture.cpp  ShieldItemTexture.h  ShieldTexture.cpp  ShieldTexture.h  SpaceshipTexture.cpp  SpaceshipTexture.h  StarItemTexture.cpp  StarItemTexture.h  StarTexture.cpp  StarTexture.h  TimeSlowingItemTexture.cpp  TimeSlowingItemTexture.h
ui/text/: GameText.cpp  GameText.h  GameTextChangeColorAnim.cpp  GameTextChangeColorAnim.h  SpaceshipGunLvlGameText.cpp  SpaceshipGunLvlGameText.h  SpaceshipHealthGameText.cpp  SpaceshipHealthGameText.h  SpaceshipPointGameText.cpp  SpaceshipPointGameText.h  SpaceshipTravelSpeedGameText.cpp  SpaceshipTravelSpeedGameText.h
